# The-Voices

./: README.md  pyproject.toml
src/thevoices/: __main__.py
